deployments/monitoring/metallbexporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: metallb-controller
  name: metallb-controller
  namespace: kube-system
spec:
  clusterIP: None
  ports:
  - name: http
    port: 7472
    targetPort: 7472
  selector:
    app: metallb
    component: controller
