deployments/monitoring/ingress-alertmanager.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-main
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.sko.ai/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.sko.ai/oauth2/start"
spec:
  rules:
  - host: alertmanager.sko.ai
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: web
        path: /
  tls:
  - hosts:
    - alertmanager.sko.ai
    secretName: ingress-cert-alertmanager
