deployments/monitoring/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.sko.ai/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.sko.ai/oauth2/start"
spec:
  rules:
  - host: grafana.sko.ai
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: http
        path: /
  tls:
  - hosts:
    - grafana.sko.ai
    secretName: ingress-cert-grafana
