deployments/monitoring/ingress-prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-k8s
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.sko.ai/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.sko.ai/oauth2/start"
spec:
  rules:
  - host: prometheus.sko.ai
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: web
        path: /
  tls:
  - hosts:
    - prometheus.sko.ai
    secretName: ingress-cert-prometheus
